<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Group C: Calculator</string>
    <string name="reset">C</string>
    <string name="percent">%</string>
    <string name="backspace">⌫</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="decimal">.</string>
    <string name="power">^</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="pi">π</string>
</resources>
