<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text="0"
        android:textSize="36sp"
        android:gravity="end"
        android:padding="16dp"
        android:background="@color/white"
        android:textColor="@color/black" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/reset"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/reset"
            android:textColor="@color/red"
            android:backgroundTint="@color/white" />

        <Button
            android:id="@+id/pi"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/pi"
            android:textColor="@color/green"/>

        <Button
            android:id="@+id/percent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/percent"
            android:textColor="@color/green"
            android:backgroundTint="@color/white" />

        <Button
            android:id="@+id/backspace"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/backspace"
            android:textColor="@color/red"
            android:backgroundTint="@color/white" />

        <Button
            android:id="@+id/div"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/divide"
            android:textColor="@color/green"
            android:backgroundTint="@color/white" />
    </LinearLayout>
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:padding="16dp"
        android:rowCount="5">

        <!-- Row 1 -->
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/seven"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/eight"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/nine"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:text="@string/multiply"
            android:textColor="@color/green" />

        <!-- Row 2 -->
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/four"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/five"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/six"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/sub"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:text="@string/subtract"
            android:textColor="@color/green" />

        <!-- Row 3 -->
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/one"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/two"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/three"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:text="@string/add"
            android:textColor="@color/green" />

        <!-- Row 4 -->
        <Button
            android:id="@+id/decimal"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:text="@string/decimal"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/zero"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/power"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:text="@string/power"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/green"
            android:textSize="20sp"
            android:text="@string/equals"
            android:textColor="@color/white" />
    </GridLayout>
</LinearLayout>
